RDS popup: fix wrapping in case of big number of RDS PS frames

--- a/assets/css/radio-table/_show/popups.css
+++ b/assets/css/radio-table/_show/popups.css
@@ -21,7 +21,7 @@
     position-area: span-left bottom;
     position-try-fallbacks: flip-inline, flip-block, flip-block flip-inline;
     margin-top: 5px;
-    max-width: 500px;
+    max-width: 460px;
 
     background: var(--background-color);
     border: 1px solid var(--border-color);
@@ -56,7 +56,7 @@
 }
 
 .rds-popup dd span {
-    display: inline;
+    display: inline-block;
     margin-right: 8px;
 
     white-space: pre;
@@ -64,6 +64,7 @@
     font-family: "Inconsolata", "Consolas", "Source Code Pro", "Lucida Console", monospace;
 }
 .rds-popup dd.rds-wrap span {
+    display: inline;
     white-space: pre-wrap;
 }
 .rds-popup dd div + div {
